# bignum_fp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: math.md  reminder.md
doc/ai_help/: deep_seek_1.md
experiments/: CMakeLists.txt
experiments/cos/: CMakeLists.txt
experiments/simplefp/: CMakeLists.txt  SimpleFP.hpp
include/bfp/: base_type_trait.hpp  default_type_trait.hpp  fixed.hpp  fp.hpp  integral_type_trait.hpp  limits.hpp  literal.hpp  math.hpp  numbers.hpp  numeric_limits.hpp  stream.hpp  string_cvt.hpp  type_defs.hpp
include/bfp/internal/: fixed.inl  fixed_number.hpp  fp.inl  fp_number.hpp  literal.inl  math.inl
tests/: CMakeLists.txt  main.cpp
tests/tests/: f_types.hpp
tests/tests/integral/: base_tests.cpp  base_tests.hpp  casts_tests.cpp  casts_tests.hpp  operators_tests.cpp  operators_tests.hpp  other_tests.cpp  other_tests.hpp
